# lr-percolation

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-nix.yml
benches/: percolation.rs
crates/lerw/: Cargo.toml
crates/lerw/src/: lerw.rs  lib.rs  main.rs  point2d.rs
crates/lr_interactions/: Cargo.toml
crates/lr_interactions/src/: lib.rs
crates/percolation/: .gitignore  Cargo.toml
crates/percolation/benches/: percolation.rs
crates/percolation/src/: lib.rs  percolation.rs
nix/modules/: devshell.nix  python.nix  rust.nix
src/: lib.rs  main.rs  norms.rs  percolation.rs
