[package]
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "lr-percolation"
description = ""
version = "0.1.0"
edition = "2021"

[lib]
name = "lr_percolation"
crate-type = ["lib", "cdylib"]

[features]
default = []
python-bindings = ["pyo3/extension-module"]

[dependencies]
rand = "0.9.0"
rayon = "1.8"
union-find-rs = "0.2.1"
rand_chacha = "0.9.0"

[dependencies.pyo3]
version = "0.24.0"
optional = true
