[package]
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "lr-percolation"
description = ""
version = "0.1.0"
edition = "2021"

[lib]
name = "lr_percolation"
crate-type = ["cdylib", "lib"]

[features]
default = []
python-bindings = ["pyo3/extension-module"]

[dependencies]
rand = "0.9.0"
rayon = "1.8"
union-find-rs = "0.2.1"
rand_chacha = "0.9.0"
clap = { version = "4.5.32", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "percolation"
harness = false

[dependencies.pyo3]
version = "0.24.0"
optional = true
